# mobilityyyyy

./: .gitignore  13 min.docx  49sec.docx  5 min.docx  build_and_run.sh  debug_floor_cam.sh  run_debug_colors.sh  run_gui.sh  run_headless.sh  test_clean.sh  test_floor_cam_fix.sh  test_floor_colors.sh  test_full.sh  test_integration.sh  test_sim.sh
extracted_zip/gaws_ws/src/grid_world/worlds/: grid_world_FINAL.sdf
gaws_ws/: .gitignore  IMPLEMENTATION_PLAN.md  README.md  build_and_run.sh
gaws_ws/docs/: P0_verification.md
gaws_ws/src/artpark_bringup/: CMakeLists.txt  package.xml
gaws_ws/src/artpark_bringup/config/: hsv_thresholds.yaml  navigation.yaml  tag_label_map.yaml
gaws_ws/src/artpark_bringup/launch/: full_run.launch.py  sim.launch.py  teleop_verify.launch.py
gaws_ws/src/artpark_decision/: package.xml  setup.cfg  setup.py
gaws_ws/src/artpark_decision/artpark_decision/: edge_sampler.py  state_machine.py  tile_tracker.py
gaws_ws/src/artpark_logger/: package.xml  setup.cfg  setup.py
gaws_ws/src/artpark_logger/artpark_logger/: logger_node.py
gaws_ws/src/artpark_msgs/: CMakeLists.txt  package.xml
gaws_ws/src/artpark_msgs/msg/: EdgeSample.msg  TagEvent.msg  Thought.msg  TileEvent.msg
gaws_ws/src/artpark_perception/: package.xml  setup.cfg  setup.py
gaws_ws/src/artpark_perception/artpark_perception/: apriltag_handler.py  floor_logo_detector.py  obstacle_monitor.py
gaws_ws/src/artpark_robot/: CMakeLists.txt  package.xml
gaws_ws/src/artpark_robot/launch/: robot.launch.py
gaws_ws/src/artpark_robot/urdf/: artpark_bot.urdf.xacro
gaws_ws/src/grid_world/: CMakeLists.txt  package.xml
gaws_ws/src/mini_r1_v1_description/: CMakeLists.txt  package.xml
gaws_ws/src/mini_r1_v1_description/config/: joint_names_MINI_R1_v1.yaml
gaws_ws/src/mini_r1_v1_description/launch/: rsp.launch.py
gaws_ws/src/mini_r1_v1_description/meshes/: CAM.STL  IMU.STL  TR_LF.STL  TR_LR.STL  TR_RF.STL  TR_RR.STL  base_link.STL
gaws_ws/src/mini_r1_v1_description/urdf/: gazebo_control.xacro  lidar.xacro  mini_r1.urdf.xacro  robot_core.xacro  sensors.xacro
gaws_ws/src/mini_r1_v1_description/worlds/: empty.sdf  warehouse.sdf
