<?xml version="1.0"?>
<package format="3">
  <name>artpark_bringup</name>
  <version>0.1.0</version>
  <description>Master launch + run configs stitching Gazebo + robot + perception + decision + logger.</description>
  <maintainer email="kshitij.betwal@gmail.com">Kshitij</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>artpark_robot</exec_depend>
  <exec_depend>artpark_perception</exec_depend>
  <exec_depend>artpark_decision</exec_depend>
  <exec_depend>artpark_logger</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
