<?xml version="1.0"?>
<package format="3">
  <name>artpark_decision</name>
  <version>0.1.0</version>
  <description>Top-level state machine. Consumes TagEvent / EdgeSample / obstacle flags and outputs cmd_vel plus scoreable events.</description>
  <maintainer email="kshitij.betwal@gmail.com">Kshitij</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>artpark_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export><build_type>ament_python</build_type></export>
</package>
