<?xml version="1.0"?>
<package format="3">
  <name>artpark_logger</name>
  <version>0.1.0</version>
  <description>Writes judge_scorecard.csv, thought_log.jsonl, raw_sensor.csv, and tag PNGs per run.</description>
  <maintainer email="kshitij.betwal@gmail.com">Kshitij</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>artpark_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export><build_type>ament_python</build_type></export>
</package>
