<?xml version="1.0"?>
<package format="3">
  <name>artpark_perception</name>
  <version>0.1.0</version>
  <description>AprilTag handler (3-frame vote), floor logo edge-sampler, and LiDAR obstacle monitor for the Artpark R3 run.</description>
  <maintainer email="kshitij.betwal@gmail.com">Kshitij</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>artpark_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export><build_type>ament_python</build_type></export>
</package>
