<?xml version="1.0"?>
<package format="3">
  <name>grid_world</name>
  <version>0.1.0</version>
  <description>Judge-provided grid-world SDF + textures for the Artpark R3 hackathon. The SDF and all textures are byte-identical to the delivered zip; this manifest + CMakeLists only exist so colcon can install them and rewrite the hardcoded /home/skullz/... paths at install time.</description>
  <maintainer email="kshitij.betwal@gmail.com">Kshitij</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
